# python-shared

./: .gitignore  pyproject.toml  requirements.txt
src/: __init__.py
src/models/: __init__.py  request_model.py
src/models/pre_processing/: __init__.py
src/models/shared/: api_request_models.py
src/uod_rg24_azure_cloud/: storage_account.py
src/uod_rg24_models/: __init__.py
src/uod_rg24_models/azure_cloud/: StorageAccountModel.py
src/uod_rg24_models/classification/: DecisionTreesModel.py  GaussianNaiveBayesModel.py  KNearestNeighborsModel.py  LogisticRegressionModel.py  MultiLayerPerceptronModel.py  RandomForestModel.py  SupportVectorMachinesModel.py  XGBoostModel.py  __init__.py
src/uod_rg24_models/digital_twins/: DigitalTwinsDataModel.py  DigitalTwinsLabelModel.py  DigitalTwinsSampleModel.py  __init__.py
src/uod_rg24_models/pre_processing/: __init__.py  keep_only_samples_models.py
src/uod_rg24_models/shared/: api_request_models.py
src/uod_rg24_models/visualisation/: BoxPlotForCrossValidationModel.py  __init__.py
src/uod_rg24_tools/: deployment_tools.py  request_tools.py
